--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ section h1{
     font-size: 30px;
 }
 
+
 .sim{
     padding: 10px;
     width: 100px;
@@ -27,4 +28,9 @@ section h1{
     border-radius: 5px;
     color: #fff;
     background-color: red;
+}
+
+.buttons{
+    display: flex;
+    gap: 10px;
 }
